# wlp

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  SPEC.md  WLP_RECEIVER_ACCEPTANCE_NOT_REPLAYABLE_GAP.md  WLP_RECEIVER_GATE_CANDIDATE.md  WLP_STANDING_BOUNDARY_CROSSREF.md  WLP_STORAGE_TRANSPORT_BOUNDARY.md
docs/: open-issues.md
examples/receiver_gate/: README.md  admission.py  receiver_gate.py  test_cook_seam_generality.py  test_receiver_gate.py  test_wicket_policy.py  wicket_policy.py
src/: canonical.rs  lib.rs  model.rs  validate.rs
tests/: boundary_admissibility.rs  canonical_equivalence.rs  revocation_edge.rs
tests/fixtures/: canonical_equivalence_a.json  canonical_equivalence_b.json  expired_authorization.json  future_dated_revocation.json  future_valid_from.json  missing_policy_refs.json  policy_less_revocation.json  revocation_targeting_other.json  unsupported_policy.json  valid_authorization.json  valid_revocation.json
