[package]
name = "wlp"
version = "0.2.0"
edition = "2021"
description = "Wire protocol for preserving admissibility across system boundaries"
license = "Apache-2.0"

[lib]
name = "wlp"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
